# discogger

./: Cargo.toml  README.md
src/: auth.rs  blocking.rs  client.rs  error.rs  lib.rs  pagination.rs  rate_limit.rs
src/models/: artist.rs  label.rs  master.rs  mod.rs  release.rs  search.rs
tests/: blocking.rs  client.rs
